Fix alignment in mast head

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -52,7 +52,7 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
+    padding-right: 4.2em;
     font-weight: 700;
   }
 }
